# agent_UI_demo

./: .gitignore  .gitmodules  README.md  config.example.toml  pyproject.toml  start.py  start.sh  start_gradio.py  stop.sh  合同模板.docx
backend/: mcp_config.json
backend/config/: hotspot_profile.toml
backend/src/: cli.py  config.py  database.py  main.py
backend/src/agent_framework/: __init__.py  agent.py  llm.py  mcp_bridge.py  mcp_config.py  session.py  tool_registry.py
backend/src/agent_framework/tools/: __init__.py  base.py
backend/src/api/: __init__.py  chat.py  contracts.py  files.py  templates.py
backend/src/gradio_app/: __init__.py  app.py  gradio_chat.py
backend/src/hotspots/: __init__.py  analyzer.py  history.py  models.py  profile.py  workflow.py
backend/src/hotspots/collectors/: __init__.py  base.py  jina_deepsearch.py  llm_collector.py  web_search_collector.py  zhihu_mcp.py
backend/src/models/: __init__.py  contract.py  message.py  template.py
backend/src/schemas/: __init__.py  chat.py  contract.py  template.py
backend/src/services/: __init__.py  agent_service.py  contract_service.py  doc_generator.py  file_service.py  llm_service.py  mcp_client.py  react_agent.py  session_service.py  template_service.py  tool_registry.py
backend/src/services/tools/: __init__.py  base.py  check_state.py  deep_research.py  generate_document.py  read_file.py  read_webpage.py  research_state.py  save_document.py  show_form.py  url_classifier.py  web_search.py  write_article.py
backend/src/utils/: mcp_monitor.py
backend/tests/: conftest.py  test_deep_research.py  test_gradio_chat_history.py  test_gradio_hotspot_tab_lightweight.py  test_gradio_hotspots.py  test_gradio_mcp_nonblocking.py  test_gradio_no_background_mcp.py  test_gradio_progress_and_branding.py  test_hotspot_history.py  test_hotspot_workflow.py  test_jina_deepsearch_collector.py  test_llm_topic_analyzer.py  test_mcp_bridge_loop_safety.py  test_mcp_client.py  test_mcp_config.py  test_research_pipeline.py  test_research_state.py  test_tool_registry.py  test_url_classifier.py  test_web_search.py  test_zhihu_mcp_collector.py  test_zhihu_mcp_collector_json.py  test_zhihu_mcp_collector_search.py
backend/tests/integration/: test_contract_generation_flow.py  test_file_upload_fix.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/api/: client.ts
frontend/src/components/: DynamicForm.vue  ErrorBoundary.vue
frontend/src/stores/: chat.ts  contract.ts
frontend/src/types/: form.ts  index.ts
frontend/src/views/: ContractWorkspace.vue
